--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -34,8 +34,15 @@ textarea {
 // Inputs
 input { line-height: normal; }
 
-input:not([type=checkbox]),
-input:not([type=radio]) {
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="tel"],
+input[type="date"] {
+  height: 36px;
+  padding: 0 .4em;
+  background-color: #fff;
+  border: 1px solid #ccc;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -43,17 +50,6 @@ input:not([type=radio]) {
   border-radius: 0;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="password"],
-input[type="tel"],
-input[type="date"],
-select {
-  height: 36px;
-  padding: 0 .4em;
-  background-color: #fff;
-  border: 1px solid #ccc;
-}
 input[type="date"]::-webkit-inner-spin-button {
   display: none;
   -webkit-appearance: none;
@@ -85,8 +81,14 @@ textarea {
   overflow: auto;
 }
 
-// Select Boxes
-select { text-transform: none; }
+// Select
+select {
+  text-transform: none;
+  height: 36px;
+  padding: 0 .4em;
+  background-color: #fff;
+  border: 1px solid #ccc;
+}
 optgroup { font-weight: $font-700; }
 
 // Buttons
